# mars_model

./: .clang-format  CMakeLists.txt  Dockerfile  Readme.md  clang-tidy
examples/: CMakeLists.txt  unconstrained_model.cpp
include/mars_model/: base_model.hpp  mars_model.hpp  se3_model.hpp  serial_link_model.hpp  utils.hpp
models/iiwa7/: iiwa7.urdf  iiwa7_0.urdf  iiwa7_1.urdf
models/iiwa7/visual/: link_0.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae  link_7.dae
models/object_3d/: object_3d.urdf  se3_object.urdf
models/object_3d/visual/: barbell.dae
src/: mars_model.cpp
tests/: CMakeLists.txt  test_iiwa7_ik.cpp  test_mars_model.cpp  test_se3_model.cpp  test_serial_link_model.cpp
